# flcker-upload

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
deploy/: drive-to-flickr.service
drive_to_flickr/: __init__.py  calendar.py  config.py  database.py  drive.py  flickr.py  google_ui.py  health.py  logging_config.py  main.py  matcher.py  metadata.py  models.py  processor.py  secrets.py  settings_store.py  web.py
drive_to_flickr/static/css/: app.css
drive_to_flickr/static/js/: app.js
drive_to_flickr/templates/: base.html  bootstrap_required.html  dashboard.html  login.html
drive_to_flickr/templates/components/: alert.html  badge.html  empty_state.html  form_field.html  status_card.html  table.html
drive_to_flickr/templates/settings/: calendar.html  flickr.html  general.html  google_account.html  google_drive.html
drive_to_flickr/templates/setup/: index.html
scripts/: install-systemd.sh
tests/: test_core.py  test_flickr.py  test_web_settings.py
