[build-system]
requires = ["setuptools==80.9.0", "wheel==0.45.1"]
build-backend = "setuptools.build_meta"

[project]
name = "drive-to-flickr"
version = "0.1.0"
description = "Upload Google Drive media to Flickr albums selected from Google Calendar events."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "drive-to-flickr contributors" }]
dependencies = [
  "google-api-python-client==2.177.0",
  "google-auth==2.40.3",
  "google-auth-oauthlib==1.2.2",
  "python-dotenv==1.1.1",
  "requests==2.32.4",
  "requests-oauthlib==2.0.0",
  "Flask==3.1.1",
]

[project.optional-dependencies]
dev = [
  "pytest==8.4.1",
  "ruff==0.12.4",
  "mypy==1.17.0",
  "types-requests==2.32.4.20250611",
]

[project.scripts]
drive-to-flickr = "drive_to_flickr.main:main"
drive-to-flickr-web = "drive_to_flickr.web:main"

[tool.setuptools.packages.find]
include = ["drive_to_flickr*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.setuptools.package-data]
drive_to_flickr = ["templates/**/*.html", "static/**/*"]
